# copy-cards

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  deck.rs  lib.rs  main.rs  tui.rs
