[package]
name = "copy-cards"
version = "1.1.6"
edition = "2021"
description = "A casino game where you don't want duplicates"
license = "GPL-3.0"
repository = "https://github.com/7ijme/copy-cards"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "copy-cards"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
rand = "0.8.4"
ratatui = "0.26.1"
small-card-deck = "0.1.0"
